# wh0share

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  format.sh  pyproject.toml  requirements.txt  utils.py
static/: style.css
templates/: index.html
