[project]
name = "wh0share"
version = "0.1.0"
description = "A simple LAN file-sharing service with a web interface, Dockerized for easy deployment."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"}
]
lint = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]

[tool.uv]
cache-dir = ".uv_cache"
python-downloads = "manual"
offline = false

[tool.black]
line-length = 88
target-version = ["py314"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.ruff_cache
  | \.uv_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = "wh0share"
combine_as_imports = true

[tool.ruff]
line-length = 88
target-version = "py314"
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E203", "E501"]
fix = true
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    ".ruff_cache",
    ".uv_cache",
]
